--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
+authors = ["James Waples <jamwaffles@gmail.com>"]
 name = "red-green-crimbo"
 version = "0.1.0"
-authors = ["James Waples <jamwaffles@gmail.com>"]
 
 [dependencies]
+cortex-m = "0.5.2"
+cortex-m-rt = "0.5.1"
+panic-semihosting = "0.2.0"
+
+[dependencies.stm32f103xx-hal]
+git = "https://github.com/japaric/stm32f103xx-hal.git"
+rev = "a25fb6276a81b51528761fa44d42df89cf6034e0"
+version = "*"
