--- a/.cargo/config
+++ b/.cargo/config
@@ -1,8 +1,10 @@
 [target.thumbv7m-none-eabi]
 runner = [ "arm-none-eabi-gdb", "-iex", "set auto-load safe-path ." ]
 rustflags = [
-  "-C", "link-arg=-Wl,-Tlink.x",
-  "-C", "link-arg=-nostartfiles",
+  "-C", "link-arg=-Tlink.x",
+  "-C", "linker=lld",
+  "-Z", "linker-flavor=ld.lld",
+  "-Z", "thinlto=no",
 ]
 
 [build]
